src/test/deca/context/valid/ext/TAB_decl.deca
{
    int a = 9;
    int[] aa = new int [1];
    int[][] aaa = new int [1][2];

    float f = 8.2;
    float[] ff = new float [1];
    float[][] fff = new float [1][2];
}