src/test/deca/context/invalid/ext/TAB_access.deca
{
    int[] a = new int[3];
    a[3][1];
}